src/styles/utils/_mixins.scss
/* ... */
// DEFAULTS
@mixin hideScrollbars() {
    /* width */
    &::-webkit-scrollbar {
        display: none;
    }

    /* Track */
    &::-webkit-scrollbar-track {
        display: none;
    }

    /* Handle */
    &::-webkit-scrollbar-thumb {
        display: none;
    }

    /* Handle on hover */
    &::-webkit-scrollbar-thumb:hover {
        display: none;
    }
}

/*#region  BUTTONS */
@mixin defaultButton() {
    border-radius: variables.$buttonBorderRadius;
    display: flex;
    align-items: center;
    justify-content: center;
    font-weight: variables.$fwMedium;
    line-height: 1;
    height: 40px;
    padding: 0 20px;
    font-size: 14px;
    border: 0;
    min-width: max-content;
    text-align: center;
    white-space: nowrap;
    color: palette.$darkerGrey;
    background: palette.$lightBg;
    @include fonts.regularFont;

    * {
        line-height: 1;
    }

    svg {
        font-size: 16px;
        margin-left: 5px;
        top: unset;
        width: unset;
        margin-right: unset;
    }

    &.smaller {
        padding: 15px 25px;
        border-radius: variables.$borderRadius;
        height: unset;
    }

    &.bottom-right {
        position: fixed;
        bottom: 140px;
        right: 10px;
        color: palette.$labelText;
        z-index: 999;
        box-shadow: variables.$boxShadow_bottom_only_extra_dark;
        border-radius: variables.$buttonBorderRadius;
        border: 1px solid palette.$lightBorderColor;
        background-color: palette.$grey;
        transform: translateX(100px);
        opacity: 0;
        transition: all 0.5s ease;
        display: flex;
        align-items: center;
        @include fonts.regularFont;

        &.active {
            transition: all 0.5s ease;
            transform: translateX(0);
            opacity: 1;
        }
    }

    &.grey {
        color: palette.$darkestGrey;
        border: 1px solid palette.$lightBorderColor;
        background: palette.$grey;

        svg {
            color: palette.$darkestGrey;
        }
    }

    &.white {
        &.color-blend {
            color: palette.$blend;
            @include fonts.mediumFont;
        }
    }

    &.translucent {
        background-color: palette.$inputBackground;
        color: white;
    }

    &.accent {
        background: palette.$purple;
        color: white;
    }

    &.blend {
        background: palette.$blend;
        color: white;
    }

    &.green {
        background: palette.$greenForWhiteText;
        color: white;
    }

    &.red {
        background: palette.$red;
        color: white;
    }

    &.bright-purple {
        background: palette.$purpleForBlendBg;
        color: white;
    }

    &.purple {
        background: palette.$purple;
        color: white;
    }

    &#upload-button {
        color: white;
    }

    &.glow {
        -webkit-box-shadow: 0 0 12px 0 rgba(124, 117, 255, 1);
        -moz-box-shadow: 0 0 12px 0 rgba(124, 117, 255, 1);
        box-shadow: 0 0 12px 0 rgba(124, 117, 255, 1);
    }
}

@mixin cardIconButton {
    border-radius: 100%;
    justify-content: center;
    align-items: center;
    display: flex;
    background: palette.$inputBackground;
    overflow: visible;
    @include square(55px);

    svg {
        color: palette.$mediumTransWhite;
        width: unset;
        display: inline;
        transform: scale(1);
        overflow: visible;
        padding: 0;
        margin: 0;
        &.email {
            transform: scale(0.9);
        }
        &.phone {
            transform: scale(0.9);
        }
        &.website {
            transform: scale(0.95);
        }
    }
}

/*#endregion  BUTTONS*/

/*#region  SIZING */
@mixin square($sizeInPixels: "20px") {
    height: $sizeInPixels;
    width: $sizeInPixels;
}
/*#endregion  SIZING */

/*#region  EFFECTS*/
@mixin AutofillReset($color: "white") {
    -webkit-text-fill-color: $color !important;
    -webkit-text-decoration-color: $color !important;
    -moz-text-decoration-color: $color !important;
    text-decoration-color: $color !important;
}
@mixin blurBg {
    position: relative;
    left: 0;
    padding: 12px;
    backdrop-filter: blur(3px);
    box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
    width: 80vw;
    @include centerHoriz;
    border-radius: 90px;
    z-index: -1;
    top: 25vh;
    bottom: -100%;
    color: #fff;
    @include shadow;

    &.active {
        z-index: 99999999999;
        transition: all 0.5s ease-in;
        opacity: 1;
        bottom: 100px;
    }
}

@mixin betterFrost($hasBorder: true) {
    backdrop-filter: blur(20px) !important;
    box-shadow: variables.$boxShadow_bottom_only_bigger;

    @if ($hasBorder) {
        border: 1px solid rgba(255, 255, 255, 0.1);
    } @else {
        border: none;
    }
}
/* ... */

